fix flex-basis, textarea scrollbar, flex-centering in ie11

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -56,3 +56,7 @@ select {
   background: transparent;
   font: inherit;
 }
+
+input[type=text]::-ms-clear {
+  display: none;
+}
